korrektur der Eisauswahl

--- a/Aufgabe_7/EisDealerNode/index.html
+++ b/Aufgabe_7/EisDealerNode/index.html
@@ -62,50 +62,11 @@
         
             </aside>
 
-    <form class="fieldsetcontainer" id="submit">
+    <form class="fieldsetcontainer" action="http://ios-eia2.herokuapp.com/" method="GET">
            
-        <fieldset>
+       <div id="Eissorten">
 
-            <div>
-
-                <select name="EisSorte1" id="IceOptGroup1">
-                    <option value="" selected>Wähle eine Eissorte</option>
-                    <optgroup id="IceOptionsOne1" label="Langweilige Eissorte">Langweilige Eissorten</optgroup>
-                    <optgroup id="IceOptionsTwo1" label="Moderne Eissorten">Moderne Eissorten</optgroup>
-
-                </select>
-                <input type="number" name="Stepper1" step="1" min="0" max="55" value="0" />
-            </div>
-            <div>
-
-                <select name="EisSorte2" id="IceOptGroup2">
-                    <option value="" selected>Wähle eine Eissorte</option>
-                    <optgroup id="IceOptionsOne2" label="Langweilige Eissorte">Langweilige Eissorten</optgroup>
-                    <optgroup id="IceOptionsTwo2" label="Moderne Eissorten">Moderne Eissorten</optgroup>
-                </select>
-                <input type="number" name="Stepper2" step="1" min="0" max="55" value="0" />
-            </div>
-            <div>
-
-                <select name="EisSorte3" id="IceOptGroup3">
-                    <option value="" selected>Wähle eine Eissorte</option>
-                    <optgroup id="IceOptionsOne3" label="Langweilige Eissorte">Langweilige Eissorten</optgroup>
-                    <optgroup id="IceOptionsTwo3" label="Moderne Eissorten">Moderne Eissorten</optgroup>
-
-                </select>
-                <input type="number" name="Stepper3" step="1" min="0" max="55" value="0" />
-            </div>
-            <div>
-
-                <select name="EisSorte4" id="IceOptGroup4">
-                    <option value="" selected>Wähle eine Eissorte</option>
-                    <optgroup id="IceOptionsOne4" label="Langweilige Eissorte">Langweilige Eissorten</optgroup>
-                    <optgroup id="IceOptionsTwo4" label="Moderne Eissorten">Moderne Eissorten</optgroup>
-                </select>
-                <input type="number" name="Stepper4" step="1" min="0" max="55" value="0" />
-            </div>
-        </fieldset>
-
+       </div>
         <div id="Toppings">
             <p>Das beste kommt oben drauf (für 80ct das Stück):</p>
             <fieldset id="Streußel">
