--- a/Aufgabe_9/Client/index.html
+++ b/Aufgabe_9/Client/index.html
@@ -15,6 +15,11 @@
 		
 		<button type="button" id="insert">Insert to database</button>
 	</fieldset>
+	<fieldset>
+		<legend> Find Student by Matrikelnumber</legend>
+		<input type="text" name="find" placeholder="Matrikelnumber" id="findMat" />
+		<button type="button" id="findButton">Search</button>
+	</fieldset>
 	<fieldset id="output">
 		<legend> All student data </legend>
 		<button type="button" id="refresh">Refresh</button>
