--- a/Aufgabe_10/index.html
+++ b/Aufgabe_10/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<script src="canvas.js"></script>
-	<title>Document</title>
+	<title>L'eau est bleue et humide</title>
 </head>
 <body>
 	<canvas width="1330" height="750" style="border: solid 1px black"></canvas>
