Anpassungen des Codes zum Größten Teil

--- a/Aufgabe_11/IOS Animation/index.html
+++ b/Aufgabe_11/IOS Animation/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<script src="canvas.js"></script>
+	<script src="Fish1.js"></script>
+	<script src="Fish2.js"></script>
+	<script src="Bubbles.js"></script>
 	<title>L'eau est bleue et humide</title>
 </head>
 <body>
