--- a/Aufgabe_12/IOS Animation/index.html
+++ b/Aufgabe_12/IOS Animation/index.html
@@ -4,10 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<script src="canvas.js"></script>
-	<script src="Fish1.js"></script>
-	<script src="Fish2.js"></script>
-	<script src="Bubbles.js"></script>
+	<script src="./canvas.js"></script>
+	<script src="./renderableObject.js"></script>
+	<script src="./movingCompany.js"></script>
+	<script src="./foodora.js"></script>
+	<script src="./Fish1.js"></script>
+	<script src="./Fish2.js"></script>
+	<script src="./Bubbles.js"></script>
+	
+	<script></script>
+
 	<title>L'eau est bleue et humide</title>
 </head>
 <body>
