--- a/00_Endabgabe/Programm/index.html
+++ b/00_Endabgabe/Programm/index.html
@@ -7,6 +7,17 @@
     <title>Der HFUChat</title>
 </head>
 <body>
-    
+    <!-- Normaler Hintergurnd und inhalt der immer da ist. -->
+    <section>
+        <h1>Der HFUChat - Connected  everywhere</h1>
+        <img src="" alt="">
+    </section>
+     <!-- Inhalt der immer wieder neu geschrieben werden kann. -->
+     <section>
+    </section>
+
+    <footer>
+        <img src="" alt="">
+    </footer>
 </body>
-</html>
+</html> 
