--- a/00_Endabgabe/Programm/index.html
+++ b/00_Endabgabe/Programm/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./CSS/stylesheet.css">
+    <script src="./JS/client.js"></script>
+    <!--<script src="00_Endabgabe/Programm/JS/HTMLData.js"></script>-->
     <title>Der HFUChat</title>
 </head>
 <body>
@@ -11,9 +14,9 @@
     <section>
         <h1>Der HFUChat - Connected  everywhere</h1>
         <img src="" alt="">
-    </section>
+    </section >
      <!-- Inhalt der immer wieder neu geschrieben werden kann. -->
-     <section>
+     <section id="htmlBox">
     </section>
 
     <footer>
