--- a/00_Endabgabe/Programm/index.html
+++ b/00_Endabgabe/Programm/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./CSS/stylesheet.css">
+    <!--<link rel="stylesheet" href="./CSS/stylesheet.css">-->
     <script src="./JS/client.js"></script>
     <!--<script src="00_Endabgabe/Programm/JS/HTMLData.js"></script>-->
     <title>Der HFUChat</title>
