Starting to think about a Konzept

--- a/01_Endabgabe_v2/index.html
+++ b/01_Endabgabe_v2/index.html
@@ -6,6 +6,6 @@
     <title>Image magique</title>
 </head>
 <body>
-    <p>This is a empty html document</p>
+    <p>This is a empty html document.</p>
 </body>
 </html>
