Ideensammeln und erste Drafts  der Funktionen innerhalnb des servers als konzept

--- a/01_Endabgabe_v2/index.html
+++ b/01_Endabgabe_v2/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image magique</title>
+    <title>Rude MS Paint - by IoS</title>
 </head>
 <body>
-    <p>This is a empty html document.</p>
+    <header>
+        <h1>Welcome to Rude MS Paint</h1>
+        <h2>Eine Endabgabe von Iven Otis Sieglen im Fach Entwicklung Interaktiver Anwendungen 2 </h2>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+    
 </body>
 </html>
