Grundbausteine erstellt und HTML grundlagen
Grundlagen der Dateistruktur und füllen der Server und Database datei.

--- a/01_Endabgabe_v2/index.html
+++ b/01_Endabgabe_v2/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rude MS Paint - by IoS</title>
+    <link rel="stylesheet" href="./2_Programm/CSS/stylesheet.css">
+    <script src="./2_Programm/JS/client.js"></script>
+    <!--<script src="./2_Programm/JS/HTMLData.js"></script>-->
+    <!--<script src="./2_Programm/JS/database.js"></script>-->
 </head>
 <body>
     <header>
         <h1>Welcome to Rude MS Paint</h1>
         <h2>Eine Endabgabe von Iven Otis Sieglen im Fach Entwicklung Interaktiver Anwendungen 2 </h2>
     </header>
-    <main>
+    <main id="htmlBox">
 
     </main>
     <footer>
