--- a/01_Endabgabe_v2/index.html
+++ b/01_Endabgabe_v2/index.html
@@ -6,10 +6,20 @@
     <title>Rude MS Paint - by IoS</title>
     <link rel="stylesheet" href="./2_Programm/CSS/stylesheet.css">
     <script src="./2_Programm/JS/client.js"></script>
+    <script src="./2_Programm/JS/HTMLData.js"></script>
     <!--<script src="./2_Programm/JS/HTMLData.js"></script>-->
     <!--<script src="./2_Programm/JS/database.js"></script>-->
 </head>
 <body>
+<!--
+Aufgabe: Endabgabe
+Name: Iven Otis Sieglen
+Matrikel: 261012
+Datum: 04.08.2020
+	
+Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. 
+*/-->
+
     <header>
         <h1>Welcome to Rude MS Paint</h1>
         <h2>Eine Endabgabe von Iven Otis Sieglen im Fach Entwicklung Interaktiver Anwendungen 2 </h2>
