--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -220,6 +220,8 @@
             <form>
               <h1>Create A New Artwork:</h1>
               <form class="loginForm">
+                <label for="canvasName">Name your Picture</label><br>
+                <input type="text" id="canvasName" name="canvasName" value="Bob Ross NR 30815"><br>
                 <label for="name">X-size in Pixels (100-1500)</label><br>
                 <input type="text" id="name" name="name" value="John"><br>
                 <label for="username">Y-size in Pixels (100-1500)</label><br>
