--- a/01_Endabgabe_v2/index.html
+++ b/01_Endabgabe_v2/index.html
@@ -21,7 +21,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe.
 */-->
 
     <header>
-        <h1>Welcome to Rude MS Paint</h1>
+        <h1>Welcome to Rude MS Paint V1.2.4.12.</h1>
         <h2>Eine Endabgabe von Iven Otis Sieglen im Fach Entwicklung Interaktiver Anwendungen 2 </h2>
     </header>
     <main id="htmlBox">
