trail end error

--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -21,9 +21,9 @@
             <span>Welcome To Rude MS Paint</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
           </div>
         </section>
 
@@ -59,9 +59,9 @@
             <span>Log In</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
           </div>
         </section>
 
@@ -108,9 +108,9 @@
             <span>Picture Overview</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
           </div>
         </section>
 
@@ -154,9 +154,9 @@
             <span>Create New User</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
           </div>
         </section>
 
@@ -205,9 +205,9 @@
             <span>Create New Canvas</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
           </div>
         </section>
 
@@ -221,13 +221,13 @@
               <h1>Create A New Artwork:</h1>
               <form class="loginForm">
                 <label for="canvasName">Name your Picture</label><br>
-                <input type="text" id="canvasName" name="canvasName" value="Bob Ross NR 30815" required><br>
+                <input type="text" id="canvasName" name="canvasName"  required><br>
                 <label for="name">X-size in Pixels (100-1500)</label><br>
-                <input type="text" id="name" name="name" value="John" required><br>
+                <input type="text" id="name" name="name"  required><br>
                 <label for="username">Y-size in Pixels (100-1500)</label><br>
-                <input type="text" id="username" name="username" value="JohnxxXX" required><br>
+                <input type="text" id="username" name="username"  required><br>
                 <label for="colorhex">Choose your canvas color</label><br>
-                <input type="color" id="colorhex" name="colorhex" value="#ffffff" required><br><br>
+                <input type="color" id="colorhex" name="colorhex"  required><br><br>
               </form>
               <button class="norm-button" id="renderNewCanvas">Create New Canvas</button>
 
@@ -259,9 +259,9 @@
             <span>MS Paint</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
           </div>
         </section>
         <section class="headerTabs">
@@ -322,9 +322,9 @@
             <span>Error - Something Went Wrong</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="../../3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
           </div>
         </section>
        
