changes in Error Msgs and html errors fixed

--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -122,7 +122,7 @@
           <section class="footerInner">
             <form>
               <h1>Look at all those Pictures:</h1>
-              <section>
+              <section id="pictureListhtml">
                 <div class="end-border-inset picList"> Eintrag 1</div>
                 <div class="end-border-inset picList"> Eintrag 2</div>
               </section>
