--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -21,9 +21,9 @@
             <span>Welcome To Rude MS Paint</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/2.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/3.png?raw=true" width="10px" alt=""></button>
           </div>
         </section>
 
@@ -59,9 +59,9 @@
             <span>Log In</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/2.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/3.png?raw=true" width="10px" alt=""></button>
           </div>
         </section>
 
@@ -108,9 +108,9 @@
             <span>Picture Overview</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/2.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/3.png?raw=true" width="10px" alt=""></button>
           </div>
         </section>
 
@@ -154,9 +154,9 @@
             <span>Create New User</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/2.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/3.png?raw=true" width="10px" alt=""></button>
           </div>
         </section>
 
@@ -205,9 +205,9 @@
             <span>Create New Canvas</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/2.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/3.png?raw=true" width="10px" alt=""></button>
           </div>
         </section>
 
@@ -259,9 +259,9 @@
             <span>MS Paint</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/2.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/3.png?raw=true" width="10px" alt=""></button>
           </div>
         </section>
         <section class="headerTabs">
@@ -322,9 +322,9 @@
             <span>Error - Something Went Wrong</span>
           </div>
           <div>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/1.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/2.png" width="10px" alt=""></button>
-            <button class="end-bg borderInset headerIcon"><img src="https://ivenios.github.io/3_IMG/3.png" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/2.png?raw=true" width="10px" alt=""></button>
+            <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/3.png?raw=true" width="10px" alt=""></button>
           </div>
         </section>
        
