hex converter eingebaut

--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -170,9 +170,9 @@
               <h1>Fill in the Form to create a new User</h1>
               <form class="loginForm">
                 <label for="name">Name</label><br>
-                <input type="text" id="name" name="name" required ><br>
+                <input type="text" id="name" name="name" maxlength="30" required ><br>
                 <label for="username">Username</label><br>
-                <input type="text" id="username" name="username" required ><br>
+                <input type="text" id="username" name="username" maxlength="30" required ><br>
                 <label for="pass">Password</label><br>
                 <input type="password" id="pass" name="pass" value="" required ><br><br>
               </form>
@@ -221,11 +221,11 @@
               <h1>Create A New Artwork:</h1>
               <form class="loginForm">
                 <label for="canvasName">Name your Picture</label><br>
-                <input type="text" id="canvasName" name="canvasName"  required><br>
+                <input type="text" id="canvasName" name="canvasName" maxlength="30" required><br>
                 <label for="xsize">X-size in Pixels (100-1500)</label><br>
-                <input type="number" id="xsize" name="xsize"  required><br>
+                <input type="number" id="xsize" name="xsize"  min="100" max="1500" required><br>
                 <label for="ysize">Y-size in Pixels (100-1500)</label><br>
-                <input type="number" id="ysize" name="ysize"  required><br>
+                <input type="number" id="ysize" name="ysize" min="100" max="1500" required><br>
                 <label for="colorhex">Choose your canvas color</label><br>
                 <input type="color" id="colorhex" name="colorhex"  required><br><br>
               </form>
