--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./konzeptCss.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+  <script src="01_Endabgabe_v2/2_Programm/JS/canvas.js"></script>
   <title>Konzept der Hauptdatei </title>
 </head>
 
