changed the divs to buttons

--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -124,8 +124,8 @@
             <form>
               <h1>Look at all those Pictures:</h1>
               <section id="pictureListhtml">
-                <div class="end-border-inset picList"> Eintrag 1</div>
-                <div class="end-border-inset picList"> Eintrag 2</div>
+                <button class="end-border-inset picList"> Eintrag 1</button>
+                <button class="end-border-inset picList"> Eintrag 2</button>
               </section>
 
 
