erstellung des canvas HTMLs

--- a/01_Endabgabe_v2/index.html
+++ b/01_Endabgabe_v2/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./2_Programm/CSS/stylesheet.css">
     <script src="./2_Programm/JS/client.js"></script>
     <script src="./2_Programm/JS/HTMLData.js"></script>
-    <script src="./2_Programm/JS/canvas.js"></script>
+    <!--<script src="./2_Programm/JS/canvas.js"></script>-->
     <!--<script src="./2_Programm/JS/HTMLData.js"></script>-->
     <!--<script src="./2_Programm/JS/database.js"></script>-->
 </head>
