--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./konzeptCss.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  <script src="01_Endabgabe_v2/2_Programm/JS/canvas.js"></script>
+  <script src="../../2_Programm/JS/canvas.js"></script>
   <title>Konzept der Hauptdatei </title>
 </head>
 
@@ -224,11 +224,11 @@
                 <label for="canvasName">Name your Picture</label><br>
                 <input type="text" id="canvasName" name="canvasName" maxlength="30" required><br>
                 <label for="xsize">X-size in Pixels (100-1500)</label><br>
-                <input type="number" id="xsize" name="xsize"  min="100" max="1500" required><br>
+                <input type="number" id="xsize" name="xsize"  min="100" max="1500" value="1500" required><br>
                 <label for="ysize">Y-size in Pixels (100-1500)</label><br>
-                <input type="number" id="ysize" name="ysize" min="100" max="1500" required><br>
+                <input type="number" id="ysize" name="ysize" min="100" max="1500" value="1500" required><br>
                 <label for="colorhex">Choose your canvas color</label><br>
-                <input type="color" id="colorhex" name="colorhex"  required><br><br>
+                <input type="color" id="colorhex" name="colorhex" value="#ffffff" required><br><br>
               </form>
               <button class="norm-button" id="renderNewCanvas">Create New Canvas</button>
 
@@ -278,10 +278,10 @@
         <div class="contentMiddle">
             <aside class="end-bg tools">
               <section class="toolsBox">
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
+                <button class="end-bg borderInset toolsStyle" id="squareButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="22px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id="circleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="22px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id="triangleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="22px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id="specialButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="22px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id="" ></button>
                 <button class="end-bg borderInset toolsStyle" id=""></button>
                 <button class="end-bg borderInset toolsStyle" id=""></button>
@@ -295,10 +295,15 @@
                 <button class="end-bg borderInset toolsStyle" id="" ></button>
               </section>
             </aside>
-            <canvas width="1000" height="340"></canvas>
+            <canvas> </canvas>
         </div>
         <section class="end-bg footer">
           <section class="footerInner">
+            <button class="norm-button" id="savePicture">Save Picture</button>
+            <button class="norm-button" id="startAnim">Start Animation</button>
+            <button class="norm-button" id="stopAnim">Stop Animation</button>
+            <button class="norm-button" id="goBackToOverview">Quit</button>
+
           </section>
           <hr>
           <section class="footerBottom">
