--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -278,21 +278,17 @@
         <div class="contentMiddle">
             <aside class="end-bg tools">
               <section class="toolsBox">
-                <button class="end-bg borderInset toolsStyle" id="squareButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="22px" alt=""></button>
-                <button class="end-bg borderInset toolsStyle" id="circleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="22px" alt=""></button>
-                <button class="end-bg borderInset toolsStyle" id="triangleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="22px" alt=""></button>
-                <button class="end-bg borderInset toolsStyle" id="specialButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="22px" alt=""></button>
-                <button class="end-bg borderInset toolsStyle" id="" ></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""></button>
-                <button class="end-bg borderInset toolsStyle" id="" ></button>
+                <button class="end-bg borderInset toolsStyle" id="squareButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/square.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id="circleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/circle.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id="triangleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/triangle.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id="specialButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id="deleteButt" ><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/rubber.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/text.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/pencil.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/misc1.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/line2.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/line1.png?raw=true" width="20px" alt=""></button>
+                
               </section>
             </aside>
             <canvas> </canvas>
