einsetzten von Objekten

--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./konzeptCss.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+
+  <script src="../../2_Programm/Objekte/obj_square.js"></script>
   <script src="../../2_Programm/JS/canvas.js"></script>
+  
   <title>Konzept der Hauptdatei </title>
 </head>
 
@@ -257,7 +260,7 @@
       <header class="end-bg header">
         <section class="headerTop">
           <div class="headerTitle">
-            <span>MS Paint</span>
+            <span>MS Paint - <span id="canvasTitle"></span></span>
           </div>
           <div>
             <button class="end-bg borderInset headerIcon"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="10px" alt=""></button>
@@ -281,7 +284,7 @@
                 <button class="end-bg borderInset toolsStyle" id="squareButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/square.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id="circleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/circle.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id="triangleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/triangle.png?raw=true" width="20px" alt=""></button>
-                <button class="end-bg borderInset toolsStyle" id="specialButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/1.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id="specialButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/special.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id="deleteButt" ><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/rubber.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/text.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/pencil.png?raw=true" width="20px" alt=""></button>
